Fix scrollbar for windows

--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ css-doodle[docs-bg] {
   top: 0;
   bottom: 0;
   z-index: 1;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   pointer-events: none;
 }
@@ -721,7 +721,7 @@ textarea[code] {
 
 
 .example {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   min-height: 380px;
   overflow: hidden;
